# bird_clef_2023

./: README.md  pyproject.toml
birdclef/: utils.py
birdclef/callbacks/: builder.py  callback.py  csv_logger.py  tensorboard_callback.py
birdclef/datasets/: augmentations.py  bird_clef_dataset.py  builder.py  utils.py
birdclef/losses/: builder.py  sed_loss.py
birdclef/metrics/: accuracy.py  auc.py  builder.py  padded_cmap.py
birdclef/models/: adaptive_avg_max_pool2d.py  builder.py  classifier.py  gem_pool.py  heads.py  sed_model.py  timm_model.py
birdclef/optimizers/: builder.py
birdclef/schedulers/: builder.py
configs/: base.py  sed.py
docker/: run_container.sh
lib/: train_lib.py
scripts/: onnx_export.py  train.py
