[tool.poetry]
name = "birdclef"
version = "0.1.0"
description = ""
authors = ["Jacob Joke"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
addict = "^2.4.0"


[tool.poetry.group.dev.dependencies]
yapf = "^0.32.0"
toml = "^0.10.2"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
